hide scrollbar fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,8 +30,16 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
-	overflow: hidden; /* Hide scrollbars */
-}
+	/* hide scrollbar but allow scrolling */
+	-ms-overflow-style: none; /* for Internet Explorer, Edge */
+	scrollbar-width: none; /* for Firefox */
+	overflow-y: scroll; 
+	}	
+
+body::-webkit-scrollbar {
+	display: none; /* for Chrome, Safari, and Opera */
+	}
+
 
 ol, ul {
 	list-style: none;
